feat: create list all dishes and find by id usecases